--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 Blog List 
 <br>
 {%for post in posts%}
@@ -6,4 +10,7 @@ Blog List
 <a href="{% url 'blog:delete' post.id %}">Delete</a>
 {%endfor%}
 <br>
-<a href="{% url 'blog:create' %}">Create</a>
+<br>
+<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" href="{% url 'blog:create' %}">Create</a>
+
+{% endblock content %}
