--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,3 @@
-hola, visita mi blog, <a href="{% url 'blog:home' %}">Aquí</a>
+{% extends 'base.html' %}
+
+{% block content %}hola, visita mi blog, <a class="text-blue-500" href="{% url 'blog:home' %}">Aquí</a>{% endblock content %}
